# textdraw-tester

./: Cargo.toml
.github/workflows/: ci.yml
scripts/: ci_rename.py
src/: lib.rs  main.rs
