[package]
name = "rust-multiline-textdraw"
version = "0.1.0"
authors = ["FalseDev <59121948+FalseDev@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
imageproc = "*"
conv = "*"
rusttype = "*"
